website/versioned_docs/version-0.5.0/cli-reference/gitops_install.md
## gitops install

Install or upgrade GitOps

### Synopsis

The install command deploys GitOps in the specified namespace,
adds a cluster entry to the GitOps repo, and persists the GitOps runtime into the
repo. If a previous version is installed, then an in-place upgrade will be performed.

```
gitops install [flags]
```

### Examples

```
  # Install GitOps in the wego-system namespace
  gitops install --app-config-url=ssh://git@github.com/me/mygitopsrepo.git
```

### Options

```
      --app-config-url string   URL of external repository that will hold automation manifests
      --dry-run                 Outputs all the manifests that would be installed
  -h, --help                    help for install
```

### Options inherited from parent commands

```
  -e, --endpoint string    The Weave GitOps Enterprise HTTP API endpoint
      --namespace string   The namespace scope for this operation (default "wego-system")
  -v, --verbose            Enable verbose output
```

### SEE ALSO

* [gitops](gitops.md)	 - Weave GitOps

###### Auto generated by spf13/cobra on 2-Dec-2021
